--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
-    "@aws-sdk/client-dynamodb": "^3.888.0",
+    "@aws-sdk/client-dynamodb": "^3.891.0",
+    "@aws-sdk/client-s3": "^3.891.0",
     "@aws-sdk/credential-providers": "^3.888.0",
-    "@aws-sdk/lib-dynamodb": "^3.888.0",
+    "@aws-sdk/lib-dynamodb": "^3.891.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
@@ -27,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "recharts": "^3.2.1",
     "rollup-plugin-polyfill-node": "^0.13.0"
   },
   "devDependencies": {
